Remove unneeded method OnlyIn
As of 1.17ish, methods are no longer stripped in classes, just whole classes, so no methods need the annotation anymore
Should consider removing it from classes too as iit shouldn't be needed